--- a/static/css/input.css
+++ b/static/css/input.css
@@ -1,1 +1,406 @@
 @import "tailwindcss";
+
+@plugin "daisyui";
+@plugin "@iconify/tailwind4";
+
+@plugin "daisyui" {
+    themes: corporate --default, abocosa, bbh, dos_plazas, frescopack;
+}
+
+@theme {
+    --color-primary-light: #ffffff;
+    --color-primary-dark: #ffffff;
+}
+
+@plugin "daisyui/theme" {
+    name: "abocosa";
+    default: false;
+    prefersdark: false;
+    color-scheme: "light";
+
+    --color-base-100: #F9FAFB;
+    --color-base-200: #E5E7EB;
+    --color-base-300: #D1D5DB;
+    --color-base-content: #1F2937;
+
+    --color-primary: #CE5C09;
+    --color-primary-content: #FFFFFF;
+
+    --color-primary-light: #E07C3B;
+    --color-primary-dark: #A54B00;
+
+    --color-secondary: #224A97;
+    --color-secondary-content: #FFFFFF;
+
+    --color-accent: #F59E0B;
+    --color-accent-content: #1F2937;
+
+    --color-neutral: #374151;
+    --color-neutral-content: #F9FAFB;
+
+    --color-info: #3B82F6;
+    --color-info-content: #FFFFFF;
+
+    --color-success: #16A34A;
+    --color-success-content: #FFFFFF;
+
+    --color-warning: #FACC15;
+    --color-warning-content: #1F2937;
+
+    --color-error: #DC2626;
+    --color-error-content: #FFFFFF;
+
+    /* Bordes y radios */
+    --radius-selector: 0.5rem;
+    --radius-field: 0.5rem;
+    --radius-box: 0.5rem;
+    --size-selector: 0.25rem;
+    --size-field: 0.25rem;
+
+    --border: 1px;
+    --depth: 1;
+    --noise: 0;
+}
+
+@plugin "daisyui/theme" {
+    name: "abocosa_dark";
+    default: false;
+    prefersdark: false;
+    color-scheme: "dark";
+
+    --color-base-100: #1F2937;
+    --color-base-200: #111827;
+    --color-base-300: #374151;
+    --color-base-content: #F9FAFB;
+
+    --color-primary: #CE5C09;
+    --color-primary-content: #FFFFFF;
+
+    --color-primary-light: #E07C3B;
+    /* más claro que el primary */
+    --color-primary-dark: #A54B00;
+
+    --color-secondary: #224A97;
+    --color-secondary-content: #FFFFFF;
+
+    --color-accent: #F59E0B;
+    --color-accent-content: #1F2937;
+
+    --color-neutral: #374151;
+    --color-neutral-content: #F9FAFB;
+
+    --color-info: #3B82F6;
+    --color-info-content: #FFFFFF;
+
+    --color-success: #16A34A;
+    --color-success-content: #FFFFFF;
+
+    --color-warning: #FACC15;
+    --color-warning-content: #1F2937;
+
+    --color-error: #DC2626;
+    --color-error-content: #FFFFFF;
+
+    /* Bordes y radios */
+    --radius-selector: 0.5rem;
+    --radius-field: 0.5rem;
+    --radius-box: 0.5rem;
+    --size-selector: 0.25rem;
+    --size-field: 0.25rem;
+
+    --border: 1px;
+    --depth: 1;
+    --noise: 0;
+}
+
+
+@plugin "daisyui/theme" {
+    name: "bbh";
+    default: false;
+    prefersdark: false;
+    color-scheme: "light";
+
+    --color-base-100: #F9FAFB;
+    --color-base-200: #E5E7EB;
+    --color-base-300: #D1D5DB;
+    --color-base-content: #1F2937;
+
+    --color-primary: #43b38a;
+    --color-primary-content: #FFFFFF;
+    --color-primary-light: #73D0AF;
+    --color-primary-dark: #2A7A61;
+
+    --color-secondary: #f5f5f5;
+    --color-secondary-content: #1F2937;
+
+    --color-accent: #5CC8FF;
+    --color-accent-content: #0F172A;
+
+    --color-neutral: #374151;
+    --color-neutral-content: #F9FAFB;
+
+    --color-info: #3ABFF8;
+    --color-info-content: #0F172A;
+
+    --color-success: #16A34A;
+    --color-success-content: #F9FAFB;
+
+    --color-warning: #FACC15;
+    --color-warning-content: #1F2937;
+
+    --color-error: #DC2626;
+    --color-error-content: #F9FAFB;
+
+    --radius-selector: 0.5rem;
+    --radius-field: 0.5rem;
+    --radius-box: 0.5rem;
+    --size-selector: 0.25rem;
+    --size-field: 0.25rem;
+
+    --border: 1px;
+    --depth: 1;
+    --noise: 0;
+}
+
+@plugin "daisyui/theme" {
+    name: "bbh_dark";
+    default: false;
+    prefersdark: false;
+    color-scheme: "dark";
+
+    --color-base-100: #1F2937;
+    --color-base-200: #111827;
+    --color-base-300: #374151;
+    --color-base-content: #F9FAFB;
+
+    --color-primary: #43b38a;
+    --color-primary-content: #FFFFFF;
+    --color-primary-light: #73D0AF;
+    --color-primary-dark: #2A7A61;
+
+    --color-secondary: #f5f5f5;
+    --color-secondary-content: #1F2937;
+
+    --color-accent: #5CC8FF;
+    --color-accent-content: #0F172A;
+
+    --color-neutral: #374151;
+    --color-neutral-content: #F9FAFB;
+
+    --color-info: #3ABFF8;
+    --color-info-content: #0F172A;
+
+    --color-success: #16A34A;
+    --color-success-content: #F9FAFB;
+
+    --color-warning: #FACC15;
+    --color-warning-content: #1F2937;
+
+    --color-error: #DC2626;
+    --color-error-content: #F9FAFB;
+
+    --radius-selector: 0.5rem;
+    --radius-field: 0.5rem;
+    --radius-box: 0.5rem;
+    --size-selector: 0.25rem;
+    --size-field: 0.25rem;
+
+    --border: 1px;
+    --depth: 1;
+    --noise: 0;
+}
+
+
+@plugin "daisyui/theme" {
+    name: "dos_plazas";
+    default: false;
+    prefersdark: false;
+    color-scheme: "light";
+
+    --color-base-100: #F9FAFB;
+    --color-base-200: #E5E7EB;
+    --color-base-300: #D1D5DB;
+    --color-base-content: #1F2937;
+
+    --color-primary: #375CF3;
+    --color-primary-content: #FFFFFF;
+    --color-primary-light: #6B8BFF;
+    --color-primary-dark: #0F3AC6;
+
+    --color-secondary: #E1A021;
+    --color-secondary-content: #1F2937;
+
+    --color-accent: #5CC8FF;
+    --color-accent-content: #0F172A;
+
+    --color-neutral: #374151;
+    --color-neutral-content: #F9FAFB;
+
+    --color-info: #3ABFF8;
+    --color-info-content: #0F172A;
+
+    --color-success: #16A34A;
+    --color-success-content: #F9FAFB;
+
+    --color-warning: #FACC15;
+    --color-warning-content: #1F2937;
+
+    --color-error: #DC2626;
+    --color-error-content: #F9FAFB;
+
+    --radius-selector: 0.5rem;
+    --radius-field: 0.5rem;
+    --radius-box: 0.5rem;
+    --size-selector: 0.25rem;
+    --size-field: 0.25rem;
+    --border: 1px;
+    --depth: 1;
+    --noise: 0;
+}
+
+@plugin "daisyui/theme" {
+    name: "dos_plazas_dark";
+    default: false;
+    prefersdark: false;
+    color-scheme: "dark";
+
+    --color-base-100: #1F2937;
+    --color-base-200: #111827;
+    --color-base-300: #374151;
+    --color-base-content: #F9FAFB;
+
+    --color-primary: #375CF3;
+    --color-primary-content: #FFFFFF;
+    --color-primary-light: #6B8BFF;
+    --color-primary-dark: #0F3AC6;
+
+    --color-secondary: #E1A021;
+    --color-secondary-content: #1F2937;
+
+    --color-accent: #5CC8FF;
+    --color-accent-content: #0F172A;
+
+    --color-neutral: #374151;
+    --color-neutral-content: #F9FAFB;
+
+    --color-info: #3ABFF8;
+    --color-info-content: #0F172A;
+
+    --color-success: #16A34A;
+    --color-success-content: #F9FAFB;
+
+    --color-warning: #FACC15;
+    --color-warning-content: #1F2937;
+
+    --color-error: #DC2626;
+    --color-error-content: #F9FAFB;
+
+    --radius-selector: 0.5rem;
+    --radius-field: 0.5rem;
+    --radius-box: 0.5rem;
+    --size-selector: 0.25rem;
+    --size-field: 0.25rem;
+    --border: 1px;
+    --depth: 1;
+    --noise: 0;
+}
+
+@plugin "daisyui/theme" {
+    name: "frescopack";
+    default: false;
+    prefersdark: false;
+    color-scheme: "light";
+
+    --color-base-100: #F9FAFB;
+    --color-base-200: #E5E7EB;
+    --color-base-300: #D1D5DB;
+    --color-base-content: #1F2937;
+
+    --color-primary: #16469a;
+    --color-primary-content: #FFFFFF;
+    --color-primary-light: #4266CC;
+    --color-primary-dark: #0C2B66;
+
+    --color-secondary: #c42026;
+    --color-secondary-content: #FFFFFF;
+
+    --color-accent: #5CC8FF;
+    --color-accent-content: #0F172A;
+
+    --color-neutral: #374151;
+    --color-neutral-content: #F9FAFB;
+
+    --color-info: #3ABFF8;
+    --color-info-content: #0F172A;
+
+    --color-success: #16A34A;
+    --color-success-content: #F9FAFB;
+
+    --color-warning: #FACC15;
+    --color-warning-content: #1F2937;
+
+    --color-error: #DC2626;
+    --color-error-content: #F9FAFB;
+
+    --radius-selector: 0.5rem;
+    --radius-field: 0.5rem;
+    --radius-box: 0.5rem;
+    --size-selector: 0.25rem;
+    --size-field: 0.25rem;
+
+    --border: 1px;
+    --depth: 1;
+    --noise: 0;
+}
+
+@plugin "daisyui/theme" {
+    name: "frescopack_dark";
+    default: false;
+    prefersdark: false;
+    color-scheme: "dark";
+
+    --color-base-100: #1F2937;
+    --color-base-200: #111827;
+    --color-base-300: #374151;
+    --color-base-content: #F9FAFB;
+
+    --color-primary: #16469a;
+    --color-primary-content: #FFFFFF;
+    --color-primary-light: #4266CC;
+    --color-primary-dark: #0C2B66;
+
+    --color-secondary: #c42026;
+    --color-secondary-content: #FFFFFF;
+
+    --color-accent: #5CC8FF;
+    --color-accent-content: #0F172A;
+
+    --color-neutral: #374151;
+    --color-neutral-content: #F9FAFB;
+
+    --color-info: #3ABFF8;
+    --color-info-content: #0F172A;
+
+    --color-success: #16A34A;
+    --color-success-content: #F9FAFB;
+
+    --color-warning: #FACC15;
+    --color-warning-content: #1F2937;
+
+    --color-error: #DC2626;
+    --color-error-content: #F9FAFB;
+
+    --radius-selector: 0.5rem;
+    --radius-field: 0.5rem;
+    --radius-box: 0.5rem;
+    --size-selector: 0.25rem;
+    --size-field: 0.25rem;
+
+    --border: 1px;
+    --depth: 1;
+    --noise: 0;
+}
+
+html {
+    scrollbar-gutter: auto !important;
+}
