--- a/templates/apps/fotos/explorador.html
+++ b/templates/apps/fotos/explorador.html
@@ -1,35 +1,72 @@
 <c-layouts.app>
-    <h1 class="text-2xl font-bold mb-4">📸 Fotos</h1>
+    <c-slot name="header">
+        <div class="grid grid-cols-1 md:grid-cols-3 items-center gap-4">
 
-    {% if ruta_padre %}
-        <a href="{% url 'fotos:path' ruta_padre %}" class="btn btn-sm mb-4">
-            ⬅ Volver
-        </a>
-    {% endif %}
+            <!-- START -->
+            <div class="justify-self-start">
+                <h1 class="font-bold text-xl flex items-center gap-2"><span class="icon-[mingcute--pic-fill]"></span> Fotos</h1>
+                <h2 class="text-muted text-sm">Fotos almacenadas en el servidor de los eventos corporativos</h2>
+            </div>
 
-    <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
+            <!-- MIDDLE -->
+            <div class="justify-self-center w-full flex justify-center">
+
+            </div>
+
+
+            <!-- END -->
+            <div class="justify-self-end">
+                {% if page_obj.paginator.num_pages > 1 %}
+                    <div class="flex justify-center mt-6 gap-2">
+                        {% if page_obj.has_previous %}
+                            <a href="?page={{ page_obj.previous_page_number }}"
+                               class="btn btn-sm">←</a>
+                        {% endif %}
+
+                        <span class="btn btn-sm btn-disabled">
+                            {{ page_obj.number }} / {{ page_obj.paginator.num_pages }}
+                        </span>
+
+                        {% if page_obj.has_next %}
+                            <a href="?page={{ page_obj.next_page_number }}"
+                               class="btn btn-sm">→</a>
+                        {% endif %}
+                    </div>
+                {% endif %}
+            </div>
+
+        </div>
+
+    </c-slot>
+
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 lg:grid-cols-8 gap-4 mb-6">
         {% for carpeta in carpetas %}
-            <a href="{% url 'fotos:path' ruta_actual|add:'/'|add:carpeta %}"
-               class="card bg-base-200 p-4 hover:shadow-xl">
-                📁 {{ carpeta }}
+            <a href="{% url 'fotos:path' ruta_actual|add:'/'|add:carpeta|default:carpeta %}"
+               class="card p-4 hover:shadow-xl hover:bg-base-100">
+                <div class="card-body">
+                    <div class="flex flex-col gap-4 items-center justify-center">
+                        <span class="icon-[material-symbols--folder] size-32"></span>
+                        {{ carpeta }}
+                    </div>
+                </div>
             </a>
         {% endfor %}
     </div>
 
-    <hr class="my-6">
 
-    <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 lg:grid-cols-6 gap-4">
         {% for foto in fotos %}
             <div class="card bg-base-100 shadow">
-                <a target="_blank" href="{% url 'fotos:show' ruta_actual|add:'/'|add:foto %}">
+                <a target="_blank"
+                   href="{% url 'fotos:show' ruta_actual|add:'/'|add:foto %}">
                     <img
                             src="{% url 'fotos:show' ruta_actual|add:'/'|add:foto %}?thumb=1"
                             class="object-cover h-48 w-full rounded"
                             loading="lazy"
-                            alt="">
+                            alt=""
+                    >
                 </a>
             </div>
         {% endfor %}
     </div>
-
 </c-layouts.app>
