--- a/templates/components/layouts/app.html
+++ b/templates/components/layouts/app.html
@@ -1,3 +1,34 @@
 <c-layouts.base>
-    {{ slot }}
+    <div class="h-screen bg-base-200 overflow-hidden">
+        <div class="flex flex-col h-screen">
+
+            <c-shared.navbar/>
+
+            {% if breadcrumbs %}
+                <div class="breadcrumb bg-base-100 shadow px-4 py-2 shrink-0">
+                    <c-shared.breadcrumbs :breadcrumbs="breadcrumbs"/>
+                </div>
+            {% endif %}
+
+            {% if header %}
+                <div class="header px-4 py-2 shrink-0">
+                    {{ header }}
+                </div>
+            {% endif %}
+
+            {% if messages %}
+                <c-shared.messages/>
+            {% endif %}
+
+            <div class="flex-1 overflow-y-auto">
+                <main class="container mx-auto p-4 min-h-full">
+                    {{ slot }}
+                </main>
+            </div>
+
+            <c-shared.footer/>
+        </div>
+
+
+    </div>
 </c-layouts.base>
