--- a/templates/components/shared/navbar.html
+++ b/templates/components/shared/navbar.html
@@ -13,7 +13,7 @@
 
     <div class="flex-1 flex justify-between items-center">
         <div class="flex items-center">
-            <a href="/" class="mx-2 px-2 text-primary-content font-bold">Intranet Corporativo</a>
+            <a href="/" class="mx-2 px-2 text-primary-content font-bold">Intranet Corporativo UNE</a>
         </div>
 
         <div class="hidden lg:block">
