--- a/templates/apps/fotos/explorador.html
+++ b/templates/apps/fotos/explorador.html
@@ -5,7 +5,7 @@
             <!-- START -->
             <div class="justify-self-start">
                 <h1 class="font-bold text-xl flex items-center gap-2"><span class="icon-[mingcute--pic-fill]"></span> Fotos</h1>
-                <h2 class="text-muted text-sm">Fotos almacenadas en el servidor de los eventos corporativos</h2>
+                <h2 class="text-muted text-sm">Fotos de los eventos corporativos.</h2>
             </div>
 
             <!-- MIDDLE -->
