--- a/templates/components/layouts/app.html
+++ b/templates/components/layouts/app.html
@@ -11,7 +11,7 @@
             {% endif %}
 
             {% if header %}
-                <div class="header px-4 py-2 shrink-0">
+                <div class="header px-4 py-2 shrink-0 shadow">
                     {{ header }}
                 </div>
             {% endif %}
