--- a/templates/components/layouts/base.html
+++ b/templates/components/layouts/base.html
@@ -1,6 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" data-theme="dos_plazas">
 <head>
     <meta charset="UTF-8">
     <title>Intranet Corporativo UNE {% if title %}
