--- a/templates/components/shared/modulos/card.html
+++ b/templates/components/shared/modulos/card.html
@@ -6,7 +6,7 @@
             <div class="card-body flex flex-col items-center text-center p-6 h-full">
                 <div class="flex items-center justify-center w-20 h-20 mb-4 bg-primary/10 rounded-full group-hover:bg-primary/20 transition-colors duration-300">
                     {% if icono %}
-                        <span class="{{ icono }}"></span>
+                        <span class="{{ icono }} size-9"></span>
                     {% else %}
                         <div class="w-10 h-10 bg-base-300 rounded-full"></div>
                     {% endif %}
