--- a/templates/components/shared/modulos/cards.html
+++ b/templates/components/shared/modulos/cards.html
@@ -4,7 +4,7 @@
                 url="{% url modulo.url_name %}"
                 :icono="modulo.icono"
                 :nombre="modulo.nombre"
-                :permiso="modulo.permiso"
+                :permisos="modulo.permisos"
                 :descripcion="modulo.descripcion"
         />
     {% endfor %}
