--- a/templates/components/layouts/app.html
+++ b/templates/components/layouts/app.html
@@ -1,8 +1,11 @@
 <c-layouts.base>
-    <div class="h-screen bg-base-200 overflow-hidden">
-        <div class="flex flex-col h-screen">
+    <div class="h-dvh bg-base-200 overflow-hidden">
+        <div class="flex flex-col h-dvh">
 
-            <c-shared.navbar/>
+            <div class="shrink-0">
+                <c-shared.navbar/>
+            </div>
+
 
             {% if breadcrumbs %}
                 <div class="breadcrumb bg-base-100 shadow px-4 py-2 shrink-0">
@@ -17,7 +20,9 @@
             {% endif %}
 
             {% if messages %}
-                <c-shared.messages/>
+                <div class="shrink-0">
+                    <c-shared.messages/>
+                </div>
             {% endif %}
 
             <div class="flex-1 overflow-y-auto">
@@ -26,7 +31,9 @@
                 </main>
             </div>
 
-            <c-shared.footer/>
+            <div class="shrink-0">
+                <c-shared.footer/>
+            </div>
         </div>
 
 
