--- a/templates/components/layouts/base.html
+++ b/templates/components/layouts/base.html
@@ -1,14 +1,27 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="es" data-theme="dos_plazas">
+<html lang="es" data-theme="{{ user.contacto.empresa.theme|default:'dos_plazas' }}">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Intranet Corporativo UNE {% if title %}
         | {{ title }}
     {% endif %} </title>
     <link rel="stylesheet" href="{% static 'css/output.css' %}">
+
+    <script type="text/javascript" src="{% static 'admin/js/vendor/jquery/jquery.js' %}"></script>
 </head>
 <body>
+
+
 {{ slot }}
+
+<link href="{% static 'admin/css/vendor/select2/select2.css' %}" media="screen" rel="stylesheet">
+<link href="{% static 'admin/css/autocomplete.css' %}" media="screen" rel="stylesheet">
+<link href="{% static 'autocomplete_light/select2.css' %}" media="screen" rel="stylesheet">
+<script src="{% static 'admin/js/vendor/select2/select2.full.js' %}"></script>
+<script src="{% static 'autocomplete_light/autocomplete_light.js' %}"></script>
+<script src="{% static 'autocomplete_light/select2.js' %}"></script>
+<script src="{% static 'autocomplete_light/i18n/es.js' %}"></script>
 </body>
 </html>
