--- a/templates/daisyui5/errors.html
+++ b/templates/daisyui5/errors.html
@@ -4,7 +4,9 @@
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                   d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z"/>
         </svg>
-        {% if form_error_title %}<h4 class="alert-heading">{{ form_error_title }}</h4>{% endif %}
-        <span>{{ form.non_field_errors|unordered_list }}</span>
+        <div class="flex flex-col gap-2">
+            {% if form_error_title %}<h4 class="text-xl font-bold">{{ form_error_title }}</h4>{% endif %}
+            <span>{{ form.non_field_errors|unordered_list }}</span>
+        </div>
     </div>
 {% endif %}
