--- a/templates/daisyui5/field.html
+++ b/templates/daisyui5/field.html
@@ -36,7 +36,7 @@
                     {% if field.errors %}
                         {% crispy_field field 'class' 'checkbox checkbox-error' %}
                     {% else %}
-                        {% crispy_field field 'class' 'checkbox' %}
+                        {% crispy_field field 'class' 'checkbox checkbox-primary' %}
                     {% endif %}
                     <label for="{{ field.id_for_label }}"
                            class="form-check-label{% if field.field.required %} requiredField{% endif %}">
