--- a/templates/daisyui5/layout/field_file.html
+++ b/templates/daisyui5/layout/field_file.html
@@ -1,31 +1,66 @@
+{% load string_utils %}
 {% load crispy_forms_field %}
+{% load static %}
 
 {% for widget in field.subwidgets %}
     {% if widget.data.is_initial %}
         <div class="input-group mb-2">
             <span class="input-group-text">{{ widget.data.initial_text }}</span>
-            <div class="form-control d-flex h-auto">
-        <span class="text-break flex-grow-1">
-            <a href="{{ field.value.url }}">{{ field.value.name }}</a>
-        </span>
-                {% if not widget.data.required %}
-                    <span class="align-self-center ml-2">
-            <span class="form-check">
-                <input type="checkbox" name="{{ widget.data.checkbox_name }}" id="{{ widget.data.checkbox_id }}"
-                       class="form-check-input"{% if field.field.disabled %} disabled{% endif %} >
-                <label class="form-check-label mb-0"
-                       for="{{ widget.data.checkbox_id }}">{{ widget.data.clear_checkbox_label }}</label>
-            </span>
-        </span>
-                {% endif %}
+
+            <div class="form-control d-flex gap-4 h-auto items-start">
+                {% with file=field.value %}
+                    {% if file %}
+                        {% with ext=file.name|lower %}
+                            {% if ext|endswith:".jpg" or ext|endswith:".jpeg" or ext|endswith:".png" or ext|endswith:".webp" or ext|endswith:".gif" %}
+                                <!-- PREVIEW DE IMAGEN -->
+                                <img
+                                        src="{{ file.url }}"
+                                        alt="{{ file.name }}"
+                                        class="h-20 w-20 object-cover rounded border"
+                                />
+                            {% endif %}
+                        {% endwith %}
+
+                        <div class="flex-grow-1 text-break">
+                            <a class="link link-primary" href="{{ file.url }}" target="_blank">
+                                {{ file.name }}
+                            </a>
+                        </div>
+                    {% endif %}
+                {% endwith %}
             </div>
         </div>
     {% endif %}
+
     <div{% if field.errors %} class="text-error"{% endif %}>
-        <input type="{{ widget.data.type }}" name="{{ widget.data.name }}"
-               class="file-input{% if widget.data.attrs.class %} {{ widget.data.attrs.class }}{% endif %}{% if field.errors %} file-input-error{% endif %}"
-                {% if field.field.disabled %} disabled{% endif %}{% for name, value in widget.data.attrs.items %}{% if value is not False and name != 'class' %}
-            {{ name }}{% if value is not True %}="{{ value|stringformat:'s' }}"{% endif %}{% endif %}{% endfor %}>
-        {% include 'daisyui5/layout/help_text_and_errors.html' %}
+        <div class="flex items-center gap-2">
+            <input
+                    type="{{ widget.data.type }}"
+                    name="{{ widget.data.name }}"
+                    class="file-input{% if widget.data.attrs.class %} {{ widget.data.attrs.class }}{% endif %}{% if field.errors %} file-input-error{% endif %}"
+                    {% if field.field.disabled %}disabled{% endif %}
+                            {% for name, value in widget.data.attrs.items %}
+                                {% if value is not False and name != 'class' %}
+                                    {{ name }}{% if value is not True %}="{{ value|stringformat:'s' }}"{% endif %}
+                                {% endif %}
+                            {% endfor %}
+            >
+            {% include 'daisyui5/layout/help_text_and_errors.html' %}
+
+            {% if not widget.data.required %}
+                <div class="align-self-center ml-2">
+                    <label class="form-check flex items-center gap-2 mb-0">
+                        <input
+                                type="checkbox"
+                                name="{{ widget.data.checkbox_name }}"
+                                id="{{ widget.data.checkbox_id }}"
+                                class="checkbox checkbox-primary"
+                                {% if field.field.disabled %}disabled{% endif %}
+                        >
+                        {{ widget.data.clear_checkbox_label }}
+                    </label>
+                </div>
+            {% endif %}
+        </div>
     </div>
 {% endfor %}
