--- a/templates/components/layouts/app.html
+++ b/templates/components/layouts/app.html
@@ -1,41 +1,37 @@
 <c-layouts.base>
-    <div class="h-dvh bg-base-200 overflow-hidden">
-        <div class="flex flex-col h-dvh">
+    <div class="flex flex-col h-dvh bg-base-200 overflow-hidden">
 
-            <div class="shrink-0">
-                <c-shared.navbar/>
-            </div>
-
-
-            {% if breadcrumbs %}
-                <div class="breadcrumb bg-base-100 shadow px-4 py-2 shrink-0">
-                    <c-shared.breadcrumbs :breadcrumbs="breadcrumbs"/>
-                </div>
-            {% endif %}
-
-            {% if header %}
-                <div class="header px-4 py-2 shrink-0 shadow">
-                    {{ header }}
-                </div>
-            {% endif %}
-
-            {% if messages %}
-                <div class="shrink-0">
-                    <c-shared.messages/>
-                </div>
-            {% endif %}
-
-            <div class="flex-1 overflow-y-auto">
-                <main class="container mx-auto p-4 min-h-full">
-                    {{ slot }}
-                </main>
-            </div>
-
-            <div class="shrink-0">
-                <c-shared.footer/>
-            </div>
+        <div class="shrink-0">
+            <c-shared.navbar/>
         </div>
 
 
+        {% if breadcrumbs %}
+            <div class="breadcrumb bg-base-100 shadow px-4 py-2 shrink-0">
+                <c-shared.breadcrumbs :breadcrumbs="breadcrumbs"/>
+            </div>
+        {% endif %}
+
+        {% if header %}
+            <div class="header px-4 py-2 shrink-0 shadow">
+                {{ header }}
+            </div>
+        {% endif %}
+
+        {% if messages %}
+            <div class="shrink-0">
+                <c-shared.messages/>
+            </div>
+        {% endif %}
+
+        <div class="flex-1 min-h-0 overflow-y-auto">
+            <main class="container mx-auto p-4 min-h-full">
+                {{ slot }}
+            </main>
+        </div>
+
+        <div class="shrink-0">
+            <c-shared.footer/>
+        </div>
     </div>
 </c-layouts.base>
