Ajuste layout mobile app shell

--- a/templates/components/layouts/app.html
+++ b/templates/components/layouts/app.html
@@ -30,7 +30,7 @@
             </main>
         </div>
 
-        <div class="shrink-0">
+        <div class="shrink-0 hidden md:block">
             <c-shared.footer/>
         </div>
     </div>
