Flujo de papeleria y apps de auditoria

--- a/templates/403.html
+++ b/templates/403.html
@@ -22,7 +22,11 @@
                 {% endif %}
 
                 <div class="card-actions justify-center mt-4">
-                    <a href="/" class="btn btn-primary">Volver al inicio</a>
+                    <a href="/" class="btn btn-primary">Dirigirse al inicio</a>
+
+                    <button onclick="history.back()" class="btn btn-outline">
+                        Volver
+                    </button>
                 </div>
 
             </div>
