--- a/templates/icons_safelist.html
+++ b/templates/icons_safelist.html
@@ -1,3 +1,4 @@
 <span class="icon-[mdi--camera]"></span>
 <span class="icon-[fluent--book-contacts-28-filled]"></span>
 <span class="icon-[hugeicons--stationery]"></span>
+<span class="icon-[healthicons--human-resoruces]"></span>
