--- a/static/css/output.css
+++ b/static/css/output.css
@@ -17,6 +17,9 @@
     --container-xs: 20rem;
     --container-md: 28rem;
     --container-lg: 32rem;
+    --container-3xl: 48rem;
+    --container-4xl: 56rem;
+    --container-5xl: 64rem;
     --container-6xl: 72rem;
     --text-xs: 0.75rem;
     --text-xs--line-height: calc(1 / 0.75);
@@ -40,6 +43,7 @@
     --font-weight-extrabold: 800;
     --tracking-wide: 0.025em;
     --leading-relaxed: 1.625;
+    --radius-lg: 0.5rem;
     --radius-xl: 0.75rem;
     --radius-2xl: 1rem;
     --default-transition-duration: 150ms;
@@ -3549,6 +3553,30 @@
   .mx-auto {
     margin-inline: auto;
   }
+  .input-sm {
+    @layer daisyui.l1.l2 {
+      --size: calc(var(--size-field, 0.25rem) * 8);
+      font-size: max(var(--font-size, 0.75rem), 0.75rem);
+      &[type="number"] {
+        &::-webkit-inner-spin-button {
+          margin-block: calc(0.25rem * -2);
+          margin-inline-end: calc(0.25rem * -3);
+        }
+      }
+    }
+  }
+  .input-sm {
+    @layer daisyui.l1.l2 {
+      --size: calc(var(--size-field, 0.25rem) * 8);
+      font-size: max(var(--font-size, 0.75rem), 0.75rem);
+      &[type="number"] {
+        &::-webkit-inner-spin-button {
+          margin-block: calc(0.25rem * -2);
+          margin-inline-end: calc(0.25rem * -3);
+        }
+      }
+    }
+  }
   .my-6 {
     margin-block: calc(var(--spacing) * 6);
   }
@@ -3970,6 +3998,19 @@
     mask-size: 100% 100%;
     --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 28 28' width='28' height='28'%3E%3Cpath fill='black' d='M5 5.75A3.75 3.75 0 0 1 8.75 2h10.5A3.75 3.75 0 0 1 23 5.75V21a1.5 1.5 0 0 1-1.5 1.5H6.514a2.25 2.25 0 0 0 2.236 2h13.5a.75.75 0 0 1 0 1.5H8.75A3.75 3.75 0 0 1 5 22.25zM16.5 9.5a2.5 2.5 0 1 0-5 0a2.5 2.5 0 0 0 5 0m2 5.375v-.103c0-.979-.794-1.772-1.773-1.772h-5.454c-.98 0-1.773.793-1.773 1.772v.103C9.5 16.437 10.786 18 14 18s4.5-1.569 4.5-3.125'/%3E%3C/svg%3E");
   }
+  .icon-\[healthicons--human-resoruces\] {
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+    background-color: currentColor;
+    -webkit-mask-image: var(--svg);
+    mask-image: var(--svg);
+    -webkit-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+    -webkit-mask-size: 100% 100%;
+    mask-size: 100% 100%;
+    --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 48 48' width='48' height='48'%3E%3Cpath fill='black' fill-rule='evenodd' d='M6 9a3 3 0 0 1 3-3h30a3 3 0 0 1 3 3v30a3 3 0 0 1-3 3H9a3 3 0 0 1-3-3zm13 11a3 3 0 1 1-6 0a3 3 0 1 1 6 0m-7 7.727c0-.118.047-.276.256-.486c.218-.22.564-.442 1.019-.641c.914-.4 2.028-.6 2.725-.6s1.81.2 2.725.6c.455.198.8.42 1.019.64c.21.211.256.369.256.487V31h2v-3.273c0-.788-.37-1.425-.837-1.896c-.459-.461-1.05-.807-1.637-1.064C18.358 24.257 16.971 24 16 24c-.972 0-2.358.257-3.526.767c-.587.257-1.178.603-1.637 1.064c-.467.471-.837 1.108-.837 1.896V31h2zm16.256-.486c-.21.21-.256.368-.256.486V31h-2v-3.273c0-.788.37-1.425.837-1.896c.459-.461 1.05-.807 1.637-1.064C29.642 24.257 31.029 24 32 24s2.358.257 3.526.767c.587.257 1.178.603 1.637 1.064c.468.471.837 1.108.837 1.896V31h-2v-3.273c0-.118-.047-.276-.256-.486c-.218-.22-.564-.442-1.019-.641c-.914-.4-2.028-.6-2.725-.6s-1.81.2-2.725.6c-.455.198-.8.42-1.019.64M32 23a3 3 0 1 0 0-6a3 3 0 1 0 0 6m-5-5a3 3 0 1 1-6 0a3 3 0 1 1 6 0m-4.754 7.166c.07-.079.168-.143.451-.17a5 5 0 0 1 .554-.012l.202.005c.17.005.363.011.547.011s.377-.006.547-.01l.202-.006a5 5 0 0 1 .554.011c.283.028.38.092.451.171l1.492-1.332c-.525-.588-1.18-.774-1.748-.83c-.344-.033-.77-.021-1.12-.012c-.142.004-.272.008-.378.008s-.236-.004-.378-.008c-.35-.01-.776-.02-1.12.013c-.568.055-1.223.241-1.748.829z' clip-rule='evenodd'/%3E%3C/svg%3E");
+  }
   .icon-\[hugeicons--stationery\] {
     display: inline-block;
     width: 1em;
@@ -4382,6 +4423,9 @@
   .h-3 {
     height: calc(var(--spacing) * 3);
   }
+  .h-5 {
+    height: calc(var(--spacing) * 5);
+  }
   .h-6 {
     height: calc(var(--spacing) * 6);
   }
@@ -4421,11 +4465,26 @@
   .min-h-\[60vh\] {
     min-height: 60vh;
   }
+  .min-h-\[120px\] {
+    min-height: 120px;
+  }
   .min-h-full {
     min-height: 100%;
   }
   .min-h-screen {
     min-height: 100vh;
+  }
+  .btn-wide {
+    @layer daisyui.l1.l2 {
+      width: 100%;
+      max-width: calc(0.25rem * 64);
+    }
+  }
+  .btn-wide {
+    @layer daisyui.l1.l2 {
+      width: 100%;
+      max-width: calc(0.25rem * 64);
+    }
   }
   .col {
     flex: 1 0 0%;
@@ -4458,8 +4517,21 @@
       width: 16.666666666666664%;
     }
   }
+  .loading-sm {
+    @layer daisyui.l1.l2 {
+      width: calc(var(--size-selector, 0.25rem) * 5);
+    }
+  }
+  .loading-sm {
+    @layer daisyui.l1.l2 {
+      width: calc(var(--size-selector, 0.25rem) * 5);
+    }
+  }
   .w-3 {
     width: calc(var(--spacing) * 3);
+  }
+  .w-5 {
+    width: calc(var(--spacing) * 5);
   }
   .w-6 {
     width: calc(var(--spacing) * 6);
@@ -4475,6 +4547,9 @@
   }
   .w-20 {
     width: calc(var(--spacing) * 20);
+  }
+  .w-24 {
+    width: calc(var(--spacing) * 24);
   }
   .w-32 {
     width: calc(var(--spacing) * 32);
@@ -4615,6 +4690,13 @@
       margin-block-end: calc(calc(var(--spacing) * 2) * calc(1 - var(--tw-space-y-reverse)));
     }
   }
+  .space-y-3 {
+    :where(& > :not(:last-child)) {
+      --tw-space-y-reverse: 0;
+      margin-block-start: calc(calc(var(--spacing) * 3) * var(--tw-space-y-reverse));
+      margin-block-end: calc(calc(var(--spacing) * 3) * calc(1 - var(--tw-space-y-reverse)));
+    }
+  }
   .space-y-4 {
     :where(& > :not(:last-child)) {
       --tw-space-y-reverse: 0;
@@ -4698,6 +4780,9 @@
   .rounded-full {
     border-radius: calc(infinity * 1px);
   }
+  .rounded-lg {
+    border-radius: var(--radius-lg);
+  }
   .rounded-xl {
     border-radius: var(--radius-xl);
   }
@@ -4712,6 +4797,22 @@
   .border-t {
     border-top-style: var(--tw-border-style);
     border-top-width: 1px;
+  }
+  .badge-outline {
+    @layer daisyui.l1.l2 {
+      color: var(--badge-color);
+      --badge-bg: #0000;
+      background-image: none;
+      border-color: currentColor;
+    }
+  }
+  .badge-outline {
+    @layer daisyui.l1.l2 {
+      color: var(--badge-color);
+      --badge-bg: #0000;
+      background-image: none;
+      border-color: currentColor;
+    }
   }
   .border-base-200 {
     border-color: var(--color-base-200);
@@ -4789,6 +4890,9 @@
   .bg-base-300 {
     background-color: var(--color-base-300);
   }
+  .bg-error {
+    background-color: var(--color-error);
+  }
   .bg-error\/10 {
     background-color: var(--color-error);
     @supports (color: color-mix(in lab, red, red)) {
@@ -4829,6 +4933,16 @@
   .to-primary-dark {
     --tw-gradient-to: var(--color-primary-dark);
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .loading-spinner {
+    @layer daisyui.l1.l2 {
+      mask-image: url("data:image/svg+xml,%3Csvg width='24' height='24' stroke='black' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cg transform-origin='center'%3E%3Ccircle cx='12' cy='12' r='9.5' fill='none' stroke-width='3' stroke-linecap='round'%3E%3CanimateTransform attributeName='transform' type='rotate' from='0 12 12' to='360 12 12' dur='2s' repeatCount='indefinite'/%3E%3Canimate attributeName='stroke-dasharray' values='0,150;42,150;42,150' keyTimes='0;0.475;1' dur='1.5s' repeatCount='indefinite'/%3E%3Canimate attributeName='stroke-dashoffset' values='0;-16;-59' keyTimes='0;0.475;1' dur='1.5s' repeatCount='indefinite'/%3E%3C/circle%3E%3C/g%3E%3C/svg%3E");
+    }
+  }
+  .loading-spinner {
+    @layer daisyui.l1.l2 {
+      mask-image: url("data:image/svg+xml,%3Csvg width='24' height='24' stroke='black' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cg transform-origin='center'%3E%3Ccircle cx='12' cy='12' r='9.5' fill='none' stroke-width='3' stroke-linecap='round'%3E%3CanimateTransform attributeName='transform' type='rotate' from='0 12 12' to='360 12 12' dur='2s' repeatCount='indefinite'/%3E%3Canimate attributeName='stroke-dasharray' values='0,150;42,150;42,150' keyTimes='0;0.475;1' dur='1.5s' repeatCount='indefinite'/%3E%3Canimate attributeName='stroke-dashoffset' values='0;-16;-59' keyTimes='0;0.475;1' dur='1.5s' repeatCount='indefinite'/%3E%3C/circle%3E%3C/g%3E%3C/svg%3E");
+    }
   }
   .stroke-current {
     stroke: currentcolor;
@@ -4905,6 +5019,9 @@
   }
   .align-middle {
     vertical-align: middle;
+  }
+  .font-mono {
+    font-family: var(--font-mono);
   }
   .text-2xl {
     font-size: var(--text-2xl);
@@ -5088,6 +5205,12 @@
   .text-base-content {
     color: var(--color-base-content);
   }
+  .text-base-content\/60 {
+    color: var(--color-base-content);
+    @supports (color: color-mix(in lab, red, red)) {
+      color: color-mix(in oklab, var(--color-base-content) 60%, transparent);
+    }
+  }
   .text-base-content\/70 {
     color: var(--color-base-content);
     @supports (color: color-mix(in lab, red, red)) {
@@ -5102,6 +5225,9 @@
   }
   .text-error {
     color: var(--color-error);
+  }
+  .text-error-content {
+    color: var(--color-error-content);
   }
   .text-gray-300 {
     color: var(--color-gray-300);
@@ -5468,6 +5594,20 @@
       }
     }
   }
+  .textarea-error {
+    @layer daisyui.l1.l2 {
+      &, &:focus, &:focus-within {
+        --input-color: var(--color-error);
+      }
+    }
+  }
+  .textarea-error {
+    @layer daisyui.l1.l2 {
+      &, &:focus, &:focus-within {
+        --input-color: var(--color-error);
+      }
+    }
+  }
   .group-hover\:bg-primary\/20 {
     &:is(:where(.group):hover *) {
       @media (hover: hover) {
@@ -5651,6 +5791,26 @@
     @media (width >= 40rem) {
       width: calc(var(--spacing) * 12);
       height: calc(var(--spacing) * 12);
+    }
+  }
+  .sm\:w-11\/12 {
+    @media (width >= 40rem) {
+      width: calc(11/12 * 100%);
+    }
+  }
+  .sm\:max-w-3xl {
+    @media (width >= 40rem) {
+      max-width: var(--container-3xl);
+    }
+  }
+  .sm\:max-w-4xl {
+    @media (width >= 40rem) {
+      max-width: var(--container-4xl);
+    }
+  }
+  .sm\:max-w-5xl {
+    @media (width >= 40rem) {
+      max-width: var(--container-5xl);
     }
   }
   .sm\:grid-cols-2 {
