--- a/templates/apps/rrhh/index.html
+++ b/templates/apps/rrhh/index.html
@@ -4,7 +4,7 @@
 
             <!-- START -->
             <div class="justify-self-start">
-                <h1 class="font-bold text-xl flex items-center gap-2">Papelería</h1>
+                <h1 class="font-bold text-xl flex items-center gap-2">RRHH</h1>
                 <h2 class="text-muted text-sm"></h2>
             </div>
 
